@@ -14,6 +14,8 @@ Changes for Perl extension SDL-Tutorial-3DWorld
 	  them to intentionally make themselves invisible.
 	- Left CTRL now provides negative lift to the God-mode camera.
 	  i.e. It makes you go vertically downwards.
+	- Added F1 toggle to enable/disable debuging actors
+	- Added F2 toggle to enable/disable abusingly expensive actors
 
 0.21 Tue 28 Dec 2010
 	- Adding directory-based asset support, which is needed for linking
